KindK8s/deploy-with-ingress/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: gotocloud-doctor-api
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: gotocloud-doctor-api
        tier: backend
        track: stable
    spec:
      containers:
        - name: gotocloud-doctor-api
          image: "docker.io/yantraqa/gotocloud-doctor-api:latest"
          ports:
            - name: http
              containerPort: 9000
---

apiVersion: v1
kind: Service
metadata:
  name: svc-gotocloud-doctor-api
spec:
  selector:
    app: gotocloud-doctor-api
    tier: backend
  ports:
    - protocol: TCP
      port: 9000
      targetPort: http

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: svc-gotocloud-doctor-api
                port:
                  number: 9000
          - pathType: Prefix
            path: "/h2-console"
            backend:
              service:
                name: svc-gotocloud-doctor-api
                port:
                  number: 9000
          - pathType: Prefix
            path: "/swagger-ui.html"
            backend:
              service:
                name: svc-gotocloud-doctor-api
                port:
                  number: 9000
          - pathType: Prefix
            path: "/swagger-ui/index.html"
            backend:
              service:
                name: svc-gotocloud-doctor-api
                port:
                  number: 9000
          - pathType: Prefix
            path: "/bar"
            backend:
              service:
                name: bar-service
                port:
                  number: 5678

---
# Front End, deployment, Service and Ingress Settings
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotocloud-appointment-app-ui
spec:
  selector:
    matchLabels:
      app: gotocloud-appointment-app-ui
      tier: frontend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: gotocloud-appointment-app-ui
        tier: frontend
        track: stable
    spec:
      containers:
        - name: gotocloud-appointment-app-ui
          image: "docker.io/yantraqa/gotocloud-appointment-app-ui:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80

---
kind: Service
apiVersion: v1
metadata:
  name: svc-gotocloud-appointment-app-ui
spec:
  selector:
    app: gotocloud-appointment-app-ui
    tier: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: svc-gotocloud-appointment-app-ui
                port:
                  number: 80
          - pathType: Prefix
            path: "/bar"
            backend:
              service:
                name: bar-service
                port:
                  number: 5678

---

# Below is for Sampling only-Retain this for reference
---

kind: Pod
apiVersion: v1
metadata:
  name: bar-app
  labels:
    app: bar
spec:
  containers:
    - name: bar-app
      image: hashicorp/http-echo:0.2.3
      args:
        - "-text=bar"
---
kind: Service
apiVersion: v1
metadata:
  name: bar-service
spec:
  selector:
    app: bar
  ports:
    # Default port used by the image
    - port: 5678

---
